@startuml
interface construction.restrictions.GraphRestriction {
+ void onNodeAdded(N)
+ void onOutNeighborAdded(N,N)
+ void onBuild()
}

interface construction.builders.GraphBuilder {
+ GraphBuilder<N> addNode(N)
+ GraphBuilder<N> addOutNeighbor(N,N)
+ GraphBuilder<N> addNeighbor(N,N)
+ Graph<N> build()
}

interface construction.restrictions.WeightedGraphRestriction {
+ void onNodeAdded(N)
+ void onEdgeAdded(N,E,N)
+ void onBuild()
}

class construction.GraphBuilderFactory {
- List<GraphRestriction<N>> restrictions
+ GraphBuilderFactory<N> addRestriction(GraphRestriction<N>)
+ GraphBuilderFactory<N> undirected()
+ GraphBuilder<N> builder()
}


class construction.builders.WeightedGraphBuilderImpl {
- Map<N,Set<EdgeEndpointPair<N,E>>> adjacencyList
- List<WeightedGraphRestriction<N,E>> restrictions
+ GraphBuilder<N> addNode(N)
+ WeightedGraphBuilder<N,E> addEdge(N,E,N)
+ WeightedGraph<N,E> build()
}


class construction.WeightedGraphBuilderFactory {
- List<WeightedGraphRestriction<N,E>> restrictions
+ WeightedGraphBuilderFactory<N,E> addRestriction(WeightedGraphRestriction<N,E>)
+ WeightedGraphBuilder<N,E> builder()
}


class construction.builders.GraphBuilderImpl {
- Map<N,Set<N>> adjacencyList
- List<GraphRestriction<N>> restrictions
+ GraphBuilder<N> addNode(N)
+ GraphBuilder<N> addOutNeighbor(N,N)
+ Graph<N> build()
}


class construction.restrictions.UndirectedRestriction {
- N lastEnd
+ void onNodeAdded(N)
+ void onEdgeAdded(N,E,N)
+ void onOutNeighborAdded(N,N)
+ void onBuild()
}


interface construction.builders.WeightedGraphBuilder {
+ WeightedGraphBuilder<N,E> addOutNeighbor(N,N)
+ WeightedGraphBuilder<N,E> addEdge(N,E,N)
+ WeightedGraphBuilder<N,E> addUndirEdge(N,E,N)
+ WeightedGraph<N,E> build()
}



construction.builders.WeightedGraphBuilder <|.. construction.builders.WeightedGraphBuilderImpl
construction.builders.GraphBuilder <|.. construction.builders.GraphBuilderImpl
construction.restrictions.GraphRestriction <|.. construction.restrictions.UndirectedRestriction
construction.restrictions.WeightedGraphRestriction <|.. construction.restrictions.UndirectedRestriction
construction.builders.GraphBuilder <|-- construction.builders.WeightedGraphBuilder
@enduml